Improved JSON handling and model instantiation.

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {
     "trusted": true
    },
@@ -1668,18 +1668,17 @@
     }
    ],
    "source": [
-    "models = []\n",
+    "callback = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
     "\n",
-    "for bm in base_models:\n",
+    "def generate_model(bm):\n",
     "    base_model = bm(\n",
     "        include_top=False,\n",
     "        weights='imagenet',\n",
     "        input_shape=(img_height, img_width, 3)\n",
     "    )\n",
-    "\n",
     "    base_model.trainable = False\n",
     "\n",
-    "    callback = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
+    "    \n",
     "\n",
     "    # Create the model\n",
     "    inputs = Input(shape=(img_height, img_width, 3))\n",
@@ -1694,9 +1693,7 @@
     "\n",
     "    model = Model(inputs, outputs, name=bm.__name__)\n",
     "    model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
-    "\n",
-    "    model.summary()\n",
-    "    models.append(model)"
+    "    return model"
    ]
   },
   {
@@ -1719,7 +1716,52 @@
      "text": [
       "Training model: ResNet50V2 on dataset: dataset_1\n",
       "Epoch 1/80\n",
-      "\u001b[1m60/87\u001b[0m \u001b[32m━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━\u001b[0m \u001b[1m13s\u001b[0m 507ms/step - accuracy: 0.7596 - loss: 0.6149"
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m64s\u001b[0m 737ms/step - accuracy: 0.9627 - loss: 0.0987 - val_accuracy: 1.0000 - val_loss: 0.0252\n",
+      "Epoch 2/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m64s\u001b[0m 740ms/step - accuracy: 0.9695 - loss: 0.0858 - val_accuracy: 0.9974 - val_loss: 0.0297\n",
+      "Epoch 3/80\n",
+      "\u001b[1m87/87\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m65s\u001b[0m 744ms/step - accuracy: 0.9583 - loss: 0.0986 - val_accuracy: 1.0000 - val_loss: 0.0269\n",
+      "Training time: 193.07 seconds\n",
+      "\u001b[1m15/15\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 636ms/step\n",
+      "\u001b[1m15/15\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 640ms/step\n",
+      "\u001b[1m15/15\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 653ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 684ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 608ms/step\n",
+      "\u001b[1m14/14\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 650ms/step - accuracy: 0.8497 - loss: 0.4020\n",
+      "{'ResNet50V2': {'dataset_1': {'history': {'accuracy': [0.9608476758003235, 0.9698275923728943, 0.9590517282485962], 'loss': [0.1064877137541771, 0.09189007431268692, 0.09710667282342911], 'val_accuracy': [1.0, 0.9973958134651184, 1.0], 'val_loss': [0.02517927624285221, 0.029657483100891113, 0.026933493092656136]}, 'training_time': 193.07433938980103, 'optimal_threshold': 0.01953480951488018, 'evaluation': {'accuracy': 0.8616071343421936, 'loss': 0.39817312359809875}}}}\n",
+      "Training model: ResNet50V2 on dataset: dataset_2\n",
+      "Epoch 1/80\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m55s\u001b[0m 790ms/step - accuracy: 0.9129 - loss: 0.2188 - val_accuracy: 0.9858 - val_loss: 0.0282\n",
+      "Epoch 2/80\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 773ms/step - accuracy: 0.9743 - loss: 0.0629 - val_accuracy: 0.9943 - val_loss: 0.0214\n",
+      "Epoch 3/80\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 787ms/step - accuracy: 0.9854 - loss: 0.0425 - val_accuracy: 1.0000 - val_loss: 0.0064\n",
+      "Epoch 4/80\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 784ms/step - accuracy: 0.9889 - loss: 0.0294 - val_accuracy: 1.0000 - val_loss: 0.0080\n",
+      "Epoch 5/80\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 780ms/step - accuracy: 0.9882 - loss: 0.0385 - val_accuracy: 0.9972 - val_loss: 0.0074\n",
+      "Epoch 6/80\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 803ms/step - accuracy: 0.9926 - loss: 0.0255 - val_accuracy: 1.0000 - val_loss: 0.0051\n",
+      "Epoch 7/80\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 778ms/step - accuracy: 0.9865 - loss: 0.0330 - val_accuracy: 1.0000 - val_loss: 0.0036\n",
+      "Epoch 8/80\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m35s\u001b[0m 787ms/step - accuracy: 0.9876 - loss: 0.0346 - val_accuracy: 1.0000 - val_loss: 0.0037\n",
+      "Epoch 9/80\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m37s\u001b[0m 822ms/step - accuracy: 0.9851 - loss: 0.0347 - val_accuracy: 1.0000 - val_loss: 0.0034\n",
+      "Epoch 10/80\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 807ms/step - accuracy: 0.9904 - loss: 0.0355 - val_accuracy: 1.0000 - val_loss: 0.0033\n",
+      "Epoch 11/80\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 815ms/step - accuracy: 0.9897 - loss: 0.0380 - val_accuracy: 1.0000 - val_loss: 0.0027\n",
+      "Epoch 12/80\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 798ms/step - accuracy: 0.9969 - loss: 0.0148 - val_accuracy: 1.0000 - val_loss: 0.0021\n",
+      "Epoch 13/80\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 798ms/step - accuracy: 0.9927 - loss: 0.0256 - val_accuracy: 1.0000 - val_loss: 0.0023\n",
+      "Epoch 14/80\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 802ms/step - accuracy: 0.9932 - loss: 0.0143 - val_accuracy: 1.0000 - val_loss: 0.0025\n",
+      "Epoch 15/80\n",
+      "\u001b[1m45/45\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m36s\u001b[0m 805ms/step - accuracy: 0.9930 - loss: 0.0188 - val_accuracy: 1.0000 - val_loss: 0.0018\n",
+      "Epoch 16/80\n",
+      "\u001b[1m18/45\u001b[0m \u001b[32m━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━\u001b[0m \u001b[1m17s\u001b[0m 636ms/step - accuracy: 0.9933 - loss: 0.0184"
      ]
     }
    ],
@@ -1730,7 +1772,9 @@
     "os.makedirs(run_dir, exist_ok=True)\n",
     "results_file = os.path.join(run_dir, 'training_results.json')\n",
     "\n",
-    "for model in models:\n",
+    "for base_model in base_models:\n",
+    "    model = generate_model(base_model) # Instantiate a new model\n",
+    "    model.summary()\n",
     "    training_results[model.name] = {}\n",
     "    plot_model(model, show_shapes=True, show_layer_names=True, to_file=f\"{model.name}_architecture.png\")\n",
     "    for dataset_name, train_dataset, val_dataset, steps_per_epoch, validation_steps in zip(combined_dataset_names, combined_training_datasets, combined_val_datasets, steps_per_epoch_list, validation_steps_list):\n",
@@ -1786,7 +1830,7 @@
     "        training_results[model.name][dataset_name] = {\n",
     "            'history': history.history,\n",
     "            'training_time': training_time,\n",
-    "            'optimal_threshold': optimal_threshold,\n",
+    "            'optimal_threshold': float(optimal_threshold),\n",
     "            \"evaluation\": model.evaluate(test_dataset, return_dict=True, steps=test_generator.samples // batch_size)\n",
     "        }\n",
     "        \n",
@@ -1796,6 +1840,146 @@
     "        with open(results_file, 'w') as f:\n",
     "            json.dump(training_results, f, indent=4)\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ResNet50V2': {'dataset_1': {'evaluation': {'accuracy': 0.8526785969734192,\n",
+      "                                             'loss': 0.4249533712863922},\n",
+      "                              'history': {'accuracy': [0.8164511322975159,\n",
+      "                                                       0.8703304529190063,\n",
+      "                                                       0.8918821811676025,\n",
+      "                                                       0.9098419547080994,\n",
+      "                                                       0.9044540524482727,\n",
+      "                                                       0.9170258641242981,\n",
+      "                                                       0.914511501789093,\n",
+      "                                                       0.9091235399246216,\n",
+      "                                                       0.928520143032074,\n",
+      "                                                       0.9331896305084229,\n",
+      "                                                       0.9303160905838013,\n",
+      "                                                       0.9357040524482727,\n",
+      "                                                       0.9425287246704102,\n",
+      "                                                       0.9428879022598267,\n",
+      "                                                       0.9436063170433044,\n",
+      "                                                       0.9493534564971924,\n",
+      "                                                       0.9525862336158752,\n",
+      "                                                       0.9615660905838013,\n",
+      "                                                       0.9486350417137146,\n",
+      "                                                       0.9529454112052917,\n",
+      "                                                       0.9594109058380127,\n",
+      "                                                       0.9536637663841248,\n",
+      "                                                       0.9601293206214905,\n",
+      "                                                       0.9633620977401733,\n",
+      "                                                       0.9691091775894165,\n",
+      "                                                       0.9698275923728943,\n",
+      "                                                       0.9669540524482727,\n",
+      "                                                       0.9662356376647949,\n",
+      "                                                       0.9669540524482727],\n",
+      "                                          'loss': [0.4896616041660309,\n",
+      "                                                   0.31561344861984253,\n",
+      "                                                   0.26226168870925903,\n",
+      "                                                   0.23752114176750183,\n",
+      "                                                   0.22795598208904266,\n",
+      "                                                   0.1986413449048996,\n",
+      "                                                   0.20386961102485657,\n",
+      "                                                   0.21407541632652283,\n",
+      "                                                   0.17160040140151978,\n",
+      "                                                   0.1650000512599945,\n",
+      "                                                   0.15922944247722626,\n",
+      "                                                   0.16286157071590424,\n",
+      "                                                   0.148105651140213,\n",
+      "                                                   0.14928878843784332,\n",
+      "                                                   0.14574190974235535,\n",
+      "                                                   0.12850365042686462,\n",
+      "                                                   0.12214306741952896,\n",
+      "                                                   0.1107197105884552,\n",
+      "                                                   0.12750910222530365,\n",
+      "                                                   0.1143825352191925,\n",
+      "                                                   0.10345588624477386,\n",
+      "                                                   0.1182832270860672,\n",
+      "                                                   0.10877018421888351,\n",
+      "                                                   0.09517233073711395,\n",
+      "                                                   0.0883888453245163,\n",
+      "                                                   0.08167314529418945,\n",
+      "                                                   0.08492027223110199,\n",
+      "                                                   0.0922650396823883,\n",
+      "                                                   0.08513683825731277],\n",
+      "                                          'val_accuracy': [0.9036458134651184,\n",
+      "                                                           0.9427083134651184,\n",
+      "                                                           0.9401041865348816,\n",
+      "                                                           0.96875,\n",
+      "                                                           0.9661458134651184,\n",
+      "                                                           0.96875,\n",
+      "                                                           0.9661458134651184,\n",
+      "                                                           0.9661458134651184,\n",
+      "                                                           0.9869791865348816,\n",
+      "                                                           0.9791666865348816,\n",
+      "                                                           0.9869791865348816,\n",
+      "                                                           0.984375,\n",
+      "                                                           0.9921875,\n",
+      "                                                           0.9765625,\n",
+      "                                                           0.9895833134651184,\n",
+      "                                                           0.9895833134651184,\n",
+      "                                                           0.9921875,\n",
+      "                                                           0.9921875,\n",
+      "                                                           0.9947916865348816,\n",
+      "                                                           1.0,\n",
+      "                                                           0.9973958134651184,\n",
+      "                                                           0.9947916865348816,\n",
+      "                                                           1.0,\n",
+      "                                                           0.9947916865348816,\n",
+      "                                                           1.0,\n",
+      "                                                           1.0,\n",
+      "                                                           1.0,\n",
+      "                                                           1.0,\n",
+      "                                                           0.9973958134651184],\n",
+      "                                          'val_loss': [0.236916184425354,\n",
+      "                                                       0.1930142641067505,\n",
+      "                                                       0.16795247793197632,\n",
+      "                                                       0.12183904647827148,\n",
+      "                                                       0.12426561117172241,\n",
+      "                                                       0.11381126195192337,\n",
+      "                                                       0.11941510438919067,\n",
+      "                                                       0.10241162776947021,\n",
+      "                                                       0.07632237672805786,\n",
+      "                                                       0.08364922553300858,\n",
+      "                                                       0.06215813755989075,\n",
+      "                                                       0.07568448781967163,\n",
+      "                                                       0.05692150071263313,\n",
+      "                                                       0.07511686533689499,\n",
+      "                                                       0.05705365538597107,\n",
+      "                                                       0.05410805717110634,\n",
+      "                                                       0.04904094338417053,\n",
+      "                                                       0.03883130103349686,\n",
+      "                                                       0.043985765427351,\n",
+      "                                                       0.03606945648789406,\n",
+      "                                                       0.03488985449075699,\n",
+      "                                                       0.03542622551321983,\n",
+      "                                                       0.03740144148468971,\n",
+      "                                                       0.030577443540096283,\n",
+      "                                                       0.022595912218093872,\n",
+      "                                                       0.01844770833849907,\n",
+      "                                                       0.024339715018868446,\n",
+      "                                                       0.03229117393493652,\n",
+      "                                                       0.020893098786473274]},\n",
+      "                              'optimal_threshold': np.float32(0.13150364),\n",
+      "                              'training_time': 1706.364991426468}}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "pprint(training_results)\n",
+    "with open(results_file, 'w') as f:\n",
+    "    training_results[\"ResNet50V2\"][\"dataset_1\"][\"optimal_threshold\"] = float(optimal_threshold)\n",
+    "    json.dump(training_results, f, indent=4)"
    ]
   }
  ],
