Added custom model for comparison

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,9 +77,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Dissertation\\Kaggle Data\\wildfire-detection\\venv\\Lib\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "# Data processing libraries\n",
     "import numpy as np\n",
@@ -90,8 +99,8 @@
     "# ML libraries\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.applications import ResNet50V2, InceptionV3, VGG16, VGG19, Xception, MobileNetV2, DenseNet121, EfficientNetV2S\n",
-    "from tensorflow.keras.layers import Dense, Dropout, BatchNormalization, GlobalAveragePooling2D, Input, Flatten, MaxPooling2D, Conv2D\n",
-    "from tensorflow.keras.models import Model, Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout, BatchNormalization, GlobalAveragePooling2D, Input\n",
+    "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator, load_img, img_to_array\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint, ReduceLROnPlateau\n",
     "from sklearn.metrics import confusion_matrix, roc_curve, auc\n",
@@ -103,7 +112,8 @@
     "import seaborn as sns\n",
     "from tensorflow.keras.utils import plot_model\n",
     "\n",
-    "# from train_parameters import *"
+    "# from train_parameters import *\n",
+    "from customnet import *"
    ]
   },
   {
@@ -115,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {
     "trusted": true
    },
@@ -151,15 +161,22 @@
     "print(train_dirs)\n",
     "print(test_dirs)\n",
     "print(val_dirs)\n",
-    "\n",
-    "base_models = [ResNet50V2, InceptionV3, VGG16, VGG19, Xception, MobileNetV2, DenseNet121, EfficientNetV2S]"
+    "base_models = [ResNet50V2, InceptionV3, VGG16, VGG19, Xception, MobileNetV2, DenseNet121, EfficientNetV2S, CUSTOMNET]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# train_workflow = {\n",
     "#     \"train\": dataset_combos, # [(train_dirs[0],), (train_dirs[1],), (train_dirs[0], train_dirs[1]), ...]\n",
@@ -815,26 +832,31 @@
    },
    "outputs": [],
    "source": [
-    "callback_list = [\n",
+    "callbacks_list = [\n",
     "EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True),\n",
     "ModelCheckpoint(filepath=os.path.join(\"tmp\", 'temp_model.keras'), monitor='val_loss', save_best_only=True),\n",
     "ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=5, verbose=1)\n",
     "]\n",
     "\n",
+    "metrics_list = ['accuracy', \n",
+    "                    Precision(name=\"precision\"), \n",
+    "                    Recall(name=\"recall\"), \n",
+    "                    AUC(name=\"auc\"), \n",
+    "                    f1_score\n",
+    "                    ]\n",
+    "\n",
     "def generate_model(bm):\n",
+    "    if bm == CUSTOMNET:\n",
+    "        model = bm\n",
+    "        model.compile(optimizer='adam', loss='binary_crossentropy', metrics=metrics_list)\n",
+    "        return model\n",
+    "    \n",
     "    base_model = bm(\n",
     "        include_top=False,\n",
     "        weights='imagenet',\n",
     "        input_shape=(img_height, img_width, 3)\n",
     "    )\n",
     "    base_model.trainable = False\n",
-    "\n",
-    "    metrics_list = ['accuracy', \n",
-    "                    Precision(name=\"precision\"), \n",
-    "                    Recall(name=\"recall\"), \n",
-    "                    AUC(name=\"auc\"), \n",
-    "                    f1_score\n",
-    "                    ]\n",
     "\n",
     "    # Create the model\n",
     "    inputs = Input(shape=(img_height, img_width, 3))\n",
@@ -2265,7 +2287,7 @@
     "            steps_per_epoch=steps_per_epoch,\n",
     "            validation_data=val_dataset,\n",
     "            validation_steps=validation_steps,\n",
-    "            callbacks=callback_list\n",
+    "            callbacks=callbacks_list\n",
     "        )\n",
     "\n",
     "        # Record the end time\n",
